tests/rosetta/transpiler/Swift/conditional-structures-6.swift
// Generated by Mochi transpiler v0.10.52 on 2025-08-01 22:07:35 GMT+7
import Foundation

func _p(_ v: Any?) -> String {
    if let val = v { return String(describing: val) }
    return "<nil>"
}

func example6(_ value: Int) {
    _ = ((value == 1) ? nil : ((value == 2) ? nil : ((value == 3) ? nil : ((value == 4) ? nil : nil))))
}
